@@ -81,10 +81,12 @@ async function getTaxonomies( request, tax = 'pages' ){
         'categories',
         'tags',
         'meta',
+        'parent'
     ];
 
     let urlParams = [
-        'order=asc'
+        'order=' + ( request.order ? processUrlParam(request.order) : 'asc' ),
+        //'orderby=' + (  ),
     ]
 
 
@@ -112,6 +114,11 @@ async function getTaxonomies( request, tax = 'pages' ){
     // if menus argument 
     if( request.menus ){
         urlParams.push( 'menus=' + processUrlParam( request.menus ) );
+    }
+
+    // if taxonomies is not menus, we add the orderby parameter.
+    if( 'menus' !== tax  ){
+        urlParams.push( 'orderby=' + request.orderby ? processUrlParam(request.orderby) : 'id' );
     }
 
     /**
@@ -181,12 +188,13 @@ async function createTaxonomies( taxData, request, tax = 'pages', spinner ){
     for( let obj of taxData ){
         // endpoint url.
         let url = `${request.url}${endpoint}/${tax}`;
-        let existingID = false;
+        let existingID = obj.id ? obj.id : false;
+        let idExists = false;
 
         // The REST API doesn't allow passing the id, in order to maintain ID's we make an additional request to our plugin endpoint.
         if( obj.id ){
             // first we check if the ID exist
-            let idExists = await axios.request(
+            idExists = await axios.request(
                 {   
                     ...request, 
                     method: 'GET',
@@ -196,9 +204,11 @@ async function createTaxonomies( taxData, request, tax = 'pages', spinner ){
                 .then((res) => { return res.data.id })
                 .catch(error => {return false;})
 
-            // for menus if ID doesn't exist we also check for matching slug
-            // if a menu with a matching slug exists we return that id instead.
-            if( 'menus' === tax && ! idExists ){
+            /**
+             * Menus Only
+             * Since we can't have duplicated slugs, if the ID doesn't exist we also check for matching slugs.
+             */
+            if( 'menus' === tax && false === idExists ){
                 idExists = await axios.request(
                     {   
                         ...request, 
@@ -210,14 +220,13 @@ async function createTaxonomies( taxData, request, tax = 'pages', spinner ){
                     .catch(error => {return false;})
 
             }
-            /**
-             * if the ID doesn't exist we save it so we can make a request to our plugin endpoint.
-             * if it does exist update endpoint url so we update the existing item.
-             */
-            if( ! idExists ){
-                existingID = obj.id;
-            }else{
-                url = `${url}/${ obj.id }`;
+
+            // if the ID exists we append it to the url.
+            if( idExists ){
+                url = `${url}/${ idExists }`;
+                
+                // we store the existing ID for later use.
+                existingID = idExists;
             }
 
             // id has to be deleted.        
@@ -246,7 +255,7 @@ async function createTaxonomies( taxData, request, tax = 'pages', spinner ){
             .then( async (res) => { return res.data; } )
 
         /**
-         * if the obj had an existing ID that didn't exist we make a request to our plugin endpoint to update the IDs.
+         * if the obj had an existing ID we make a request to our plugin endpoint to update the IDs.
          */
         if( existingID ){
 
@@ -263,7 +272,8 @@ async function createTaxonomies( taxData, request, tax = 'pages', spinner ){
             .then( async (res) => { return res.data; } )
             
             // update the API results ID, back to the existing ID from earlier.
-            results.id = existingID;
+           results.id = existingID;
+
         }
 
         // add results to collection
