@@ -1,5 +1,7 @@
 v1.3.4
 - Removed ssh generation in cli config.yml 
+- Added orderby argument to GET requests
+- Resolved issue with Menus that have the same slug but not the same ID
 
 v1.3.3
 - Removed timeout from requests
